--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Dashboard Panel</a>
+                <a class="navbar-brand" href="#">Dashboard Panel</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="active" class="nav navbar-nav side-nav">
-                    <li class="selected"><a href="index.html"><i class="fa fa-bullseye"></i> Dashboard</a></li>
+                    <li class="selected"><a href="#l"><i class="fa fa-bullseye"></i> Dashboard</a></li>
                     <li><a href="portfolio.html"><i class="fa fa-tasks"></i> Team Profiles</a></li>
                     <li><a href="#"><i class="fa fa-globe"></i> Admin Dashbord (Phase II)</a></li>
                     <li><a href="#"><i class="fa fa-font"></i> Historical Data (Phase II)</a></li>
