--- a/portfolio.html
+++ b/portfolio.html
@@ -38,11 +38,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Back to Dashboard</a>
+                <a class="navbar-brand" href="https://gauravsha27.github.io/custom.jenkins.dashboard.github.io/">Back to Dashboard</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li><a href="index.html"><i class="fa fa-bullseye"></i> Dashboard</a></li>
+                    <li><a href="https://gauravsha27.github.io/custom.jenkins.dashboard.github.io/"><i class="fa fa-bullseye"></i> Dashboard</a></li>
                     <li class="selected"><a href="portfolio.html"><i class="fa fa-tasks"></i> Team Profiles</a></li>
                     <li><a href="#"><i class="fa fa-globe"></i> Admin Dashbord (Phase II)</a></li>
                     <li><a href="#"><i class="fa fa-font"></i> Historical Data (Phase II)</a></li>
