--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link id="gridcss" rel="stylesheet" type="text/css" href="css/dark.all.min.css" />
 
     <script type="text/javascript" src="js/nprogress.js"></script>
-    <!-- you need to include the shieldui css and js assets in order for the charts to work -->
+    <!-- We need to include the shieldui css and js assets in order for the charts to work -->
     <!--
     <script type="text/javascript" src="js/shieldui-all.min.js"></script>
     <script type="text/javascript" src="js/gridData.js"></script>
@@ -36,15 +36,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Dashboard Panel</a>
+                <a class="navbar-brand" href="index.html">Dashboard Panel</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul id="active" class="nav navbar-nav side-nav">
-                    <li class="selected"><a href="#l"><i class="fa fa-bullseye"></i> Dashboard</a></li>
-                    <li><a href="portfolio.html"><i class="fa fa-tasks"></i> Team Profiles</a></li>
-                    <li><a href="#"><i class="fa fa-globe"></i> Admin Dashbord (Phase II)</a></li>
-                    <li><a href="#"><i class="fa fa-font"></i> Historical Data (Phase II)</a></li>
+                    <li class="selected"><a href="index.html"><i class="fa fa-bullseye"></i><span class="nav-label"> Dashboard</span></a></li>
+                    <li><a href="portfolio.html"><i class="fa fa-tasks"></i><span class="nav-label"> Team Profiles</span></a></li>
+                    <li><a href="#"><i class="fa fa-globe"></i><span class="nav-label"> Admin Dashbord (Phase II)</span></a></li>
+                    <li><a href="#"><i class="fa fa-font"></i><span class="nav-label"> Historical Data (Phase II)</span></a></li>
                 </ul>
+                <p href="#" class="btn-expand-collapse"></p>
             </div>
         </nav>
         <div id="page-wrapper">
