--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="https://gauravsha27.github.io/custom.jenkins.dashboard.github.io/">Back to Dashboard</a>
+                <a class="navbar-brand" href="index.html">Back to Dashboard</a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav side-nav">
-                    <li><a href="https://gauravsha27.github.io/custom.jenkins.dashboard.github.io/"><i class="fa fa-bullseye"></i> Dashboard</a></li>
-                    <li class="selected"><a href="portfolio.html"><i class="fa fa-tasks"></i> Team Profiles</a></li>
-                    <li><a href="#"><i class="fa fa-globe"></i> Admin Dashbord (Phase II)</a></li>
-                    <li><a href="#"><i class="fa fa-font"></i> Historical Data (Phase II)</a></li>
+                <ul id="active" class="nav navbar-nav side-nav">
+                    <li><a href="index.html"><i class="fa fa-bullseye"></i><span class="nav-label"> Dashboard</span></a></li>
+                    <li class="selected"><a href="portfolio.html"><i class="fa fa-tasks"></i><span class="nav-label"> Team Profiles</span></a></li>
+                    <li><a href="#"><i class="fa fa-globe"></i><span class="nav-label"> Admin Dashbord (Phase II)</span></a></li>
+                    <li><a href="#"><i class="fa fa-font"></i><span class="nav-label"> Historical Data (Phase II)</span></a></li>
                 </ul>
+                <p href="#" class="btn-expand-collapse"></p>
             </div>
         </nav>
         <div class="container">
