--- a/portfolio.html
+++ b/portfolio.html
@@ -66,13 +66,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/sreedath-profile.jpg" />
                                 <h2>Pozhtoal, Sreedath Kuttan </h2>
                                 <span>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                                    Excepteur sint occaecat cupidatat non proident, 
-                                    sunt in culpa qui officia deserunt mollit anim id est laborum
+                                    He facilitated the complete development process and being a Guide throughout the development of this tool Also helped the team to avail all the infarsturcture requierd For this development. Under his supervision team have created This dashboard, keeping in mind for simplicity with resubaliity.
                                 </span>
                             </div>
                         </div>
@@ -81,13 +75,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/gaurav-profile.jpg" />
                                 <h2>Sharma, Gaurav</h2>
                                 <span>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                                    Excepteur sint occaecat cupidatat non proident, 
-                                    sunt in culpa qui officia deserunt mollit anim id est laborum
+                                  Gaurav has led and managed this initiative from the Concept to design and Design to Development and development to delivery. He identified the pain points of using Jenkins and design a solution to resolve the issues with simple solutions. He assembles the team and make sure that the team will deliver the product in the best possible form.
                                 </span>
                             </div>
                         </div>
@@ -96,13 +84,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/swetali-profile.jpg" />
                                 <h2>Kar, Swetali</h2>
                                 <span>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                                    Excepteur sint occaecat cupidatat non proident, 
-                                    sunt in culpa qui officia deserunt mollit anim id est laborum
+                                    Swetali has worked as a functional support for the team and she helped the team to shape the concept and also gave a valid portfolio to it. She also helped the team to validate the outcome of the application from the business perspective.
                                 </span>
                             </div>
                         </div>
@@ -113,13 +95,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/sandeep-profile.jpg" />
                                 <h2>Konala, Teja Sai Sandeep Reddy </h2>
                                 <span>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                                    Excepteur sint occaecat cupidatat non proident, 
-                                    sunt in culpa qui officia deserunt mollit anim id est laborum
+                                    Sandeep is a core server side developer of this application and he created a main engine API of this application with the help of Haseeb and Gaurav. He analyzed the life cycle of the custom Jenkins plugins and developed a plugin that will fit the requirement and provide the reuierd output.
                                 </span>
                             </div>
                         </div>
@@ -128,13 +104,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/haseeb-profile.jpg" />
                                 <h2>Rahman, Mohammed Haseeb Ur </h2>
                                 <span>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
-                                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-                                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                                    Excepteur sint occaecat cupidatat non proident, 
-                                    sunt in culpa qui officia deserunt mollit anim id est laborum
+                                Haseeb helped in Jenkins installation and configuration of the plugin that is developed and tested it in all the scenarios. Also, he is working on packaging of the solution so we can distribute this to other projects which are using Jenkins. 
                                 </span>
                             </div>
                         </div>
