--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/sreedath-profile.jpg" />
                                 <h2>Pozhtoal, Sreedath Kuttan </h2>
                                 <span>
-                                    He facilitated the complete development process and being a Guide throughout the development of this tool Also helped the team to avail all the infarsturcture requierd For this development. Under his supervision team have created This dashboard, keeping in mind for simplicity with resubaliity.
+                                    Sreedath has facilitated the complete development process and was a guide throughout the development of this tool. He has also helped the team to avail all the infrastructure required for this development. Under his supervision the team has created this dashboard, keeping in mind simplicity and reusability.
                                 </span>
                             </div>
                         </div>
@@ -75,7 +75,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/gaurav-profile.jpg" />
                                 <h2>Sharma, Gaurav</h2>
                                 <span>
-                                  Gaurav has led and managed this initiative from the Concept to design and Design to Development and development to delivery. He identified the pain points of using Jenkins and design a solution to resolve the issues with simple solutions. He assembles the team and make sure that the team will deliver the product in the best possible form.
+                                  Gaurav has led and managed this initiative from the concept to design and design to development and development to delivery. He has identified the pain points of using Jenkins and designed a solution to resolve the issues with simple solutions. He has assembled the team and made sure that the team delivers the product in the best possible form.
                                 </span>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/swetali-profile.jpg" />
                                 <h2>Kar, Swetali</h2>
                                 <span>
-                                    Swetali has worked as a functional support for the team and she helped the team to shape the concept and also gave a valid portfolio to it. She also helped the team to validate the outcome of the application from the business perspective.
+                                   Swetali has worked as functional support for the team and has helped the team to shape the concept and provided a valid portfolio to it. She also helped the team to validate the outcome of the application from the business perspective.
                                 </span>
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/sandeep-profile.jpg" />
                                 <h2>Konala, Teja Sai Sandeep Reddy </h2>
                                 <span>
-                                    Sandeep is a core server side developer of this application and he created a main engine API of this application with the help of Haseeb and Gaurav. He analyzed the life cycle of the custom Jenkins plugins and developed a plugin that will fit the requirement and provide the reuierd output.
+                                    Sandeep is the core server side developer of this application and he created the main engine API of this application with the help of Haseeb and Gaurav. He has analyzed the life cycle of custom Jenkins plugins and developed a plugin that will fit the requirement of all scenarios and provide the required output. 
                                 </span>
                             </div>
                         </div>
@@ -104,11 +104,10 @@
                                 <img class="thumbnail img-responsive" alt="Team Pics" src="images/haseeb-profile.jpg" />
                                 <h2>Rahman, Mohammed Haseeb Ur </h2>
                                 <span>
-                                Haseeb helped in Jenkins installation and configuration of the plugin that is developed and tested it in all the scenarios. Also, he is working on packaging of the solution so we can distribute this to other projects which are using Jenkins. 
+                                    Haseeb has helped in Jenkins installation and configuration of the plugin with various jobs and tested the plugin in all the scenarios. He is also working on the packaging of the solution which we can be distributed to other projects which are using Jenkins. 
                                 </span>
                             </div>
                         </div>
-
                         <div class="col-md-4">
                         </div>
                     </div>
