--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <button data-dismiss="alert" class="close" type="button">&times;</button>
                         Welcome to the Jenkins admin dashboard! Please click on retrive data button to get the latest view from all servers.
                         <br />
-                        This is a prototype apllication developed by Gaurav/ Snadeep/ Haseeb/ Swetali. You can directly assess this on the real devices. Please visit <a href="https://gauravsha27.github.io/custom.jenkins.dashboard.github.io/index.html">Custom Jenkins Dashboard</a>. Your feedback is valuable for us.
+                        This is a prototype apllication developed by Gaurav/ Sandeep/ Haseeb/ Swetali. You can directly assess this on the real devices. Please visit <a href="https://gauravsha27.github.io/custom.jenkins.dashboard.github.io/index.html">Custom Jenkins Dashboard</a>. Your feedback is valuable for us.
                     </div>
                 </div>
             </div>
