--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li><a href="#"><i class="fa fa-globe"></i><span class="nav-label"> Admin Dashbord (Phase II)</span></a></li>
                     <li><a href="#"><i class="fa fa-font"></i><span class="nav-label"> Historical Data (Phase II)</span></a></li>
                 </ul>
-                <p href="#" class="btn-expand-collapse"></p>
+                <p href="#" class="btn-expand-collapse">::</p>
             </div>
         </nav>
         <div id="page-wrapper">
